Add tracking code

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+  for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
+  mixpanel.init("b1db3a46fb953afcc5b6dfa09c06b418");</script><!-- end Mixpanel -->
 
 </head>
 
@@ -46,9 +49,9 @@
                 <hr>
                 <h2>Get In Touch</h2>
                 <div class="get-in-touch">
-                  <a href="mailto:phthhieu@gmail.com">Email</a>
-                  <a href="https://vn.linkedin.com/pub/hieu-pham/50/a30/2b3">LinkedIn</a>
-                  <a href="https://www.facebook.com/phthhieu">Facebook</a>
+                  <a href="mailto:phthhieu@gmail.com" class="email-link">Email</a>
+                  <a href="https://vn.linkedin.com/pub/hieu-pham/50/a30/2b3" class="linkedin-link">LinkedIn</a>
+                  <a href="https://www.facebook.com/phthhieu" class="facebook-link">Facebook</a>
                 </div>
             </div>
         </div>
@@ -67,6 +70,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+    
+    <script src="js/tracking-code.js"></script>
 
 </body>
 
