--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="header-content-inner">
                 <h1>HIEU PHAM</h1>
                 <hr>
-                <p>FULLSTACK RUBY ON RAILS AND IOS AT HIPVAN.COM</p>
-                <p>FORMER MISFIT WEARABLES</p>
+                <p>Co-founder/Hacker At Atoha</p>
+                <p>Past: Hipvan, Misfit Wearables, Vinagame, Gameloft</p>
                 <hr>
                 <h2>Get In Touch</h2>
                 <div class="get-in-touch">
