Update linkedin url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>Get In Touch</h2>
                 <div class="get-in-touch">
                   <a href="mailto:phthhieu@gmail.com" class="email-link">Email</a>
-                  <a href="https://vn.linkedin.com/pub/hieu-pham/50/a30/2b3" class="linkedin-link">LinkedIn</a>
+                  <a href="https://www.linkedin.com/in/phthhieu" class="linkedin-link">LinkedIn</a>
                   <a href="https://www.facebook.com/phthhieu" class="facebook-link">Facebook</a>
                 </div>
             </div>
